# gasless_gossip_ai

./: .gitignore  README.md  requirements-ml.txt
.github/workflows/: cairo.yml
backend/: package-lock.json  package.json
backend/src/: app.module.ts
backend/src/chat/: chat.graphql  (+1 more)
contract/: Scarb.toml
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Footer.tsx  Layout.tsx  Navbar.tsx  ThemeProvider.tsx  ThemeSwitcher.tsx
ml-services/: CACHING.md
ml-services/sticker-generation-service/: README.md  pyproject.toml
ml-services/sticker-generation-service/src/: cached_sticker_generator.py  diffusion_model.py  disk_cache.py  main.py  memory_lru_cache.py  sticker-generator.ipynb  sticker_generator.py  utils.py
ml-services/sticker-generation-service/src/test_cache/: test_sticker_cache.py
ml-services/text-prediction-service/: .env.example  README.md  pyproject.toml
ml-services/text-prediction-service/src/: api.py  cache.py  cached_predictor.py  main.py  memory_cache.py  predictor.py  text-prediction-service.ipynb
ml-services/text-prediction-service/src/test_cach/: test_cache.py  test_fallback_cache.py
ml/inference/: batch_processor.py  real_time_processor.py
ml/models/: routing_optimizer.py  sentiment_analyzer.py  spam_detector.py
ml/training/: data_preprocessor.py  federated_trainer.py  model_evaluator.py
ml/utils/: crypto_utils.py  privacy_preserving.py
mobile-app/: package-lock.json
mobile-app/app/: _layout.tsx  index.tsx
server/: package-lock.json
(+10 files in other folders)
