[project]
name = "sticker-generation-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.5.2",
    "diffusers>=0.32.2",
    "fastapi",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "rembg",
    "ruff>=0.9.7",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "transformers>=4.50.0",
]
