[project]
name = "text-prediction-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "ruff>=0.9.7",
    "torch>=2.6.0",
    "transformers>=4.50.0",
    "uvicorn>=0.34.0",
]
